--- a/src/pages/articles.css
+++ b/src/pages/articles.css
@@ -12,6 +12,8 @@
 @import url('../blocks/header/__navigation/header__navigation.css');
 @import url('../blocks/header/__nav/header__nav.css');
 @import url('../blocks/header/__logo/header__logo.css');
+@import url('../blocks/header/__logo-text/header__logo-text.css');
+@import url('../blocks/header/__mobile-icon/header__mobile-icon.css');
 @import url('../blocks/header/__list/header__list.css');
 @import url('../blocks/header/__link/header__link.css');
 @import url('../blocks/header/__link/_border/header__link_border-black.css');
