--- a/src/blocks/header/__line/header__line.css
+++ b/src/blocks/header/__line/header__line.css
@@ -2,3 +2,10 @@
   width: 100%;
   height: 1px;
 }
+
+@media screen and (max-width: 767px) {
+  .header__line {
+    position: absolute;
+    top: 60px;
+  }
+}
