--- a/src/blocks/header/__link/header__link.css
+++ b/src/blocks/header/__link/header__link.css
@@ -6,6 +6,10 @@
   width: 100%;
 }
 
+#toSigninButton {
+  display: flex;
+}
+
 @media screen and (max-width: 767px) {
   .header__link {
     font-size: 18px;
