--- a/src/blocks/header/__list/header__list.css
+++ b/src/blocks/header/__list/header__list.css
@@ -2,6 +2,8 @@
   list-style: none;
   display: flex;
   padding: 0;
+  margin: 0;
+  align-items: center;
 }
 
 @media screen and (max-width: 767px) {
