--- a/src/blocks/header/__mobile-icon/header__mobile-icon.css
+++ b/src/blocks/header/__mobile-icon/header__mobile-icon.css
@@ -2,6 +2,7 @@
   display: none;
   width: 24px;
   height: 24px;
+  cursor: url('../../../images/lapka.png'), pointer;
 }
 
 @media screen and (max-width: 767px) {
