--- a/src/blocks/popup/__button/_is-enabled/popup__button_is-enabled.css
+++ b/src/blocks/popup/__button/_is-enabled/popup__button_is-enabled.css
@@ -1,4 +1,5 @@
 .popup__button_is-enabled {
-	background-color: #000;
+  background-color: #2F71E5;
+  box-shadow: 0px 5px 15px rgba(14, 26, 57, 0.2);
   color: #fff;
 }
