--- a/src/blocks/popup/__button/popup__button.css
+++ b/src/blocks/popup/__button/popup__button.css
@@ -2,7 +2,6 @@
   width: 100%;
   height: 64px;
   margin: 24px 0 16px;
-  background-color: #2F71E5;
-  box-shadow: 0px 5px 15px rgba(14, 26, 57, 0.2);
-  color: #fff;
+  background-color: #E6E8EB;
+  color: #B6BCBF;
 }
