--- a/src/blocks/article/__icon/_type/article__icon_type_delete.css
+++ b/src/blocks/article/__icon/_type/article__icon_type_delete.css
@@ -5,3 +5,21 @@
 .article__icon_type_delete:hover {
   background: url(../../../../images/Group14.png) center no-repeat;
 }
+
+.article__icon_type_delete:hover::after {
+  content: 'Убрать из сохраненных';
+  display: block;
+  font-family: 'Roboto', serif;
+  font-size: 12px;
+  line-height: 14px;
+  color: #000;
+  font-weight: bold;
+  background-color: #fff;
+  padding: 13px 12px;
+  position: absolute;
+  border-radius: 10px;
+  top: 0;
+  right: 48px;
+  margin: 0;
+  width: 80px;
+}
