--- a/src/blocks/article/__icon/article__icon.css
+++ b/src/blocks/article/__icon/article__icon.css
@@ -8,6 +8,7 @@
   right: 24px;
   cursor: url('../../../images/lapka.png'), pointer;
   display: block;
+  z-index: 10000;
 }
 
 @media screen and (max-width: 1024px) {
