--- a/src/blocks/article/__title/article__title.css
+++ b/src/blocks/article/__title/article__title.css
@@ -4,6 +4,10 @@
   line-height: 30px;
   color: #1A1B22;
   margin: 0 0 16px;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 1024px) {
